slide show image and validate create article

--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -32,13 +32,13 @@
                     <div class="inner" >
                         <li class="post-item clearfix tin-vip vipnoibat" style="border-color: #E13427;"
                             post-id="585180" *ngFor="let article of articles">
-                            <figure><a routerLink="/client/detail-article">
+                            <figure><a routerLink="/detail-article/{{article.articleId}}">
                                         <img class="lazy_done" src="{{article.image}}" alt="" height="100" width="100" layout="responsive" data-loaded="true">
-                                    </a><span class="images-number">14 ảnh</span><span class="chothuenhanh-label"></span>
+                                    </a><span class="images-number">{{(article.image.split(',')).length}} ảnh</span><span class="chothuenhanh-label"></span>
                                     <span class="post-save js-btn-save" data-post-id="585180" title="Lưu tin này vào danh sách quan tâm"><i></i></span></figure>
                             <div class="post-meta">
                                 <h4 class="post-title"><span class="star star-5"></span>
-                                    <a style="color: #E13427;" >{{article.title}}</a>
+                                    <a style="color: #E13427;" routerLink="/detail-article/{{article.articleId}}">{{article.title}}</a>
                                     </h4><span class="post-price">{{article.roomPrice}}
                                     triệu/tháng</span><span class="post-acreage">{{article.acreage}}m²</span>
                                     <span class="post-location">
