--- a/src/app/client/clients-page/shared/header/header.component.html
+++ b/src/app/client/clients-page/shared/header/header.component.html
@@ -8,8 +8,7 @@
                 </div>
                 <div class="dropdown">
                     <button class="btn dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false" routerLink="/client/profile/article-manager">
-                        Quản lý tài khoản <i class="arrow-down"></i>
+                        aria-haspopup="true" aria-expanded="false">Quản lý tài khoản <i class="arrow-down"></i>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
                         <li><a class="dropdown-menu-item dang-tin" rel="nofollow"
@@ -33,7 +32,7 @@
 
                     </ul>
                 </div>
-                <a rel="nofollow" class="btn btn-add-post" routerLink="/client/profile/create-article">Đăng
+                <a rel="nofollow" class="btn btn-add-post" routerLink="/profile/create-article">Đăng
                     tin mới <i></i></a>
 
             </div>
@@ -41,12 +40,12 @@
         <nav id="navbar-menu">
         <ul id="menu-main-menu" class="container-menu clearfix level-1">
             <li class="navbar_item clearfix active current-menu-item"><a routerLink="/client/home">Trang chủ</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/client/rent-room">Cho thuê phòng trọ</a></li>
-            <li class="navbar_item clearfix "><a routerLink="/client/room-mates">Tìm người ở ghép</a></li>
-            <li class="navbar_item clearfix "><a routerLink="blog">Blog</a></li>
-            <li class="navbar_item clearfix "><a routerLink="tutorial">Hướng dẫn</a></li>
-            <li class="navbar_item clearfix "><a routerLink="profile/paypal-view">Nạp tiền</a></li>
-            <li class="navbar_item clearfix "><a routerLink="profile/price-list">Bảng giá</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/rent-room">Cho thuê phòng trọ</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/room-mates">Tìm người ở ghép</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/blog">Blog</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/tutorial">Hướng dẫn</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/profile/paypal-view">Nạp tiền</a></li>
+            <li class="navbar_item clearfix "><a routerLink="/profile/price-list">Bảng giá</a></li>
         </ul>
         </nav>
     </div>
