menu header client

--- a/src/app/client/clients-page/client-blog/client-blog.component.html
+++ b/src/app/client/clients-page/client-blog/client-blog.component.html
@@ -1,6 +1,7 @@
 <div id="trangchu" class="home home loaded ready">
     <div id="webpage">
         <!-- Header -->
+        <!-- <app-header></app-header> -->
         <main id="main">
             <div id="breadcrumb">
                 <ol class="clearfix" itemscope="" itemtype="http://schema.org/BreadcrumbList">
