--- a/src/app/client/clients-page/client-home/client-home.component.html
+++ b/src/app/client/clients-page/client-home/client-home.component.html
@@ -1,6 +1,8 @@
 <div id="trangchu" class="home home loaded ready">
     <div id="webpage">
         <!-- Header -->
+        <app-header></app-header>
+        
         <main id="main">
             
             <app-searchbar></app-searchbar>
