--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,19 +1,8 @@
-<nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-          <span aria-hidden="true">&laquo;</span>
-          <span class="sr-only">Previous</span>
-        </a>
-      </li>
-      <li class="page-item"><a class="page-link" routerLink="/admin/staff">1</a></li>
-      <li class="page-item"><a class="page-link" routerLink="/admin/staff">2</a></li>
-      <li class="page-item"><a class="page-link" routerLink="/admin/staff">3</a></li>
-      <li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-          <span aria-hidden="true">&raquo;</span>
-          <span class="sr-only">Next</span>
-        </a>
-      </li>
-    </ul>
-  </nav>
+<tbody>
+  <tr *ngFor="let game of articles | paginate: { itemsPerPage: 5, currentPage: page }">
+    <!-- <td>{{i}}</td> -->
+    <td>{{game.articleId}}</td>
+    <!-- <td>{{game.genre}}</td> -->
+  </tr>
+</tbody>
+<pagination-controls (pageChange)="page = $event"></pagination-controls>
