slide show detail artcile

--- a/src/app/client/clients-page/detail-article/detail-article.component.html
+++ b/src/app/client/clients-page/detail-article/detail-article.component.html
@@ -14,7 +14,7 @@
                             <ol class="clearfix" itemscope="" itemtype="http://schema.org/BreadcrumbList">
                                 <li itemprop="itemListElement" class="first link" itemscope=""
                                     itemtype="http://schema.org/ListItem"><a itemtype="https://schema.org/Thing"
-                                        itemprop="item" href="https://phongtro123.com/cho-thue-phong-tro"
+                                        itemprop="item" href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                                         title="Phòng trọ"><span itemprop="name">Phòng trọ</span></a>
                                     <meta itemprop="position" content="1">
                                 </li>
