footer client home

--- a/src/app/client/clients-page/shared/footer/footer.component.html
+++ b/src/app/client/clients-page/shared/footer/footer.component.html
@@ -1,5 +1,5 @@
-<div id="trangchu" class="home home loaded ready">
-    <div id="webpage">
+<!-- <div id="trangchu" class="home home loaded ready"> -->
+    <!-- <div id="webpage"> -->
         <footer id="page-footer">
             <div class="footer-shape"><svg height="100%" width="100%" id="bg-svg" viewBox="0 0 1440 400"
                     xmlns="http://www.w3.org/2000/svg" class="transition duration-300 ease-in-out delay-150">
@@ -11,58 +11,54 @@
             <div class="page-footer-content">
                 <div class="inner">
                     <div class="footer-row clearfix">
-                        <div class="footer-col first"><a class="footer-logo" href="https://phongtro123.com/">Thuê phòng
+                        <div class="footer-col first"><a class="footer-logo" href="https://PhongTroThanhXuan.com/">Thuê phòng
                                 trọ</a>
                             <p style="line-height: 1.3;">Đứng đầu các từ khóa liên quan đến <a
-                                    href="https://phongtro123.com/cho-thue-phong-tro"
+                                    href="https://PhongTroThanhXuan.com/cho-thue-phong-tro"
                                     title="phòng trọ cho thuê"><strong>phòng trọ cho thuê</strong></a>, <a
-                                    href="https://phongtro123.com/nha-cho-thue" title="nhà cho thuê"><strong>nhà cho
-                                        thuê</strong></a>, <a href="https://phongtro123.com/tim-nguoi-o-ghep"
+                                    href="https://PhongTroThanhXuan.com/nha-cho-thue" title="nhà cho thuê"><strong>nhà cho
+                                        thuê</strong></a>, <a href="https://PhongTroThanhXuan.com/tim-nguoi-o-ghep"
                                     title="tìm người ở ghép"><strong>tìm người ở ghép</strong></a></p>
                             <p style="line-height: 1.3;"><strong>70.000+</strong> tin bài trên hệ thống, và tiếp tục
                                 tăng</p>
                             <p style="line-height: 1.3;"><strong>300.000+</strong> khách truy cập và <strong>hơn 2
                                     triệu</strong> lượt xem mỗi tháng</p>
                         </div>
-                        <div class="footer-col"><span class="footer-col-title">Về PHONGTRO123.COM</span>
+                        <div class="footer-col"><span class="footer-col-title">Phòng Trọ Thanh Xuân</span>
                             <ul class="footer-menu">
-                                <li><a href="https://phongtro123.com/">Trang chủ</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/gioi-thieu">Giới thiệu</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/blog.html">Blog</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/quy-che-hoat-dong">Quy chế hoạt
-                                        động</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/quy-dinh-su-dung">Quy định sử
-                                        dụng</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/chinh-sach-bao-mat">Chính sách bảo
+                                <li><a href="https://PhongTroThanhXuan.com/">Trang chủ</a></li>
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/gioi-thieu">Giới thiệu</a></li>
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/blog.html">Blog</a></li>
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/chinh-sach-bao-mat">Chính sách bảo
                                         mật</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/lien-he">Liên hệ</a></li>
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/lien-he">Liên hệ</a></li>
                             </ul>
                         </div>
                         <div class="footer-col"><span class="footer-col-title">Hỗ trợ khách hàng</span>
                             <ul class="footer-menu">
-                                <li><a rel="nofollow" href="https://phongtro123.com/cau-hoi-thuong-gap">Câu hỏi thường
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/cau-hoi-thuong-gap">Câu hỏi thường
                                         gặp</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/huong-dan-su-dung">Hướng dẫn đăng
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/huong-dan-su-dung">Hướng dẫn đăng
                                         tin</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/bang-gia-dich-vu">Bảng giá dịch
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/bang-gia-dich-vu">Bảng giá dịch
                                         vụ</a></li>
-                                <li><a rel="nofollow" href="https://phongtro123.com/quy-dinh-dang-tin">Quy định đăng
+                                <li><a rel="nofollow" href="https://PhongTroThanhXuan.com/quy-dinh-dang-tin">Quy định đăng
                                         tin</a></li>
                                 <li><a rel="nofollow"
-                                        href="https://phongtro123.com/chinh-sach-giai-quyet-khieu-nai">Giải quyết khiếu
+                                        href="https://PhongTroThanhXuan.com/chinh-sach-giai-quyet-khieu-nai">Giải quyết khiếu
                                         nại</a></li>
                             </ul>
                         </div>
                         <div class="footer-col"><span class="footer-col-title">Liên hệ với chúng tôi</span>
                             <div class="social-links"><a class="social-fb" rel="nofollow" target="_blank"
-                                    href="https://www.facebook.com/phongtro123.com.vn/"><i></i></a><a
+                                    href="https://www.facebook.com/PhongTroThanhXuan.com.vn/"><i></i></a><a
                                     class="social-youtube" rel="nofollow" target="_blank"
                                     href="https://www.youtube.com/channel/UCaffQMAgZZ_sp92UPjR6Fgg"><i></i></a><a
                                     class="social-zalo" rel="nofollow" target="_blank"
                                     href="https://zalo.me/273083239502498077"><i></i></a><a class="social-viber"
                                     rel="nofollow" target="_blank" href="viber://chat?number=0917686101"><i></i></a><a
                                     class="social-twitter" rel="nofollow" target="_blank"
-                                    href="https://twitter.com/phongtro123"><i></i></a>
+                                    href="https://twitter.com/PhongTroThanhXuan"><i></i></a>
                             </div>
                             <br>
                             <span class="footer-col-title">Phương thức thanh toán</span>
@@ -79,8 +75,8 @@
                     <div class="footer-company">
                         <p class="company_name"><strong>CÔNG TY TNHH LBKCORP</strong></p>
                         <p><strong>Tổng đài CSKH: 0917.686.101</strong></p>
-                        <p>Copyright © 2015 - 2021 Phongtro123.com</p>
-                        <p>Email: cskh.phongtro123@gmail.com | lienhe.phongtro123@gmail.com</p>
+                        <p>Copyright © 2015 - 2021 PhongTroThanhXuan.com</p>
+                        <p>Email: cskh.PhongTroThanhXuan@gmail.com | lienhe.PhongTroThanhXuan@gmail.com</p>
                         <p>Địa chỉ: LE-4.07, Toà nhà Lexington Residence, Số 67 Mai Chí Thọ, Phường An Phú, Quận 2, Tp.
                             Hồ Chí Minh.</p>
                         <p>Giấy phép đăng ký kinh doanh số 0313588502 do Sở kế hoạch và Đầu tư thành phố Hồ Chí Minh cấp
@@ -90,24 +86,24 @@
                                 target="_blank"
                                 href="http://online.gov.vn/HomePage/WebsiteDisplay.aspx?DocId=43297"></a><a
                                 rel="nofollow" style="display: inline-block; margin: 0 5px;" target="_blank"
-                                href="https://www.dmca.com/Protection/Status.aspx?ID=c20c5527-4840-484e-adc5-37179174f55b&amp;refurl=https://phongtro123.com/"
+                                href="https://www.dmca.com/Protection/Status.aspx?ID=c20c5527-4840-484e-adc5-37179174f55b&amp;refurl=https://PhongTroThanhXuan.com/"
                                 title="DMCA.com Protection Status" class="dmca-badge">
                                 <img src="https://www.dmca.com/img/dmca_logo.png?=sd" style="height: 50px;"
                                     alt="DMCA.com Protection Status">
                             </a>
                             <script
-                                src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - Phongtro123.com_files/DMCABadgeHelper.min.js.download"></script>
+                                src="./Cho thuê phòng trọ, cho thuê nhà trọ, tìm phòng trọ - PhongTroThanhXuan.com_files/DMCABadgeHelper.min.js.download"></script>
                         </div>
                     </div>
                 </div>
             </div>
         </footer>
-        <div id="fixed_Left" class="banner_fixed" style="display: block; left: 39.5px;"><a target="_blank"
-                href="https://bds123.vn/"><img src="https://phongtro123.com/images/bds123_120_300.gif"></a>
+        <!-- <div id="fixed_Left" class="banner_fixed" style="display: block; left: 39.5px;"><a target="_blank"
+                href="https://bds123.vn/"><img src="https://PhongTroThanhXuan.com/images/bds123_120_300.gif"></a>
         </div>
         <div id="fixed_Right" class="banner_fixed" style="display: block; right: 39.5px;"><a target="_blank"
                 rel="nofollow" href="http://bit.ly/nhom-phong-tro-facebook"><img
-                    src="https://phongtro123.com/images/ad_nhom_fb.jpg"></a>
-        </div>
-    </div>
-</div>
+                    src="https://PhongTroThanhXuan.com/images/ad_nhom_fb.jpg"></a>
+        </div> -->
+    <!-- </div> -->
+<!-- </div> -->
